--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,10 @@
 * {
     font-family: 'IBM Plex Sans', sans-serif;
+    background-color: #F1F3F5;
+}
+
+.navbar, .sidebar {
+    background-color: #fff;
 }
 
 .sidebar .nav-link .feather {
